k8s/apps/fraternity/frat-dashboard/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      component: admin
  template:
    metadata:
      labels:
        component: admin
    spec:
      containers:
        - name: app
          image: systemfraternity/frat_dashboard
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      securityContext:
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - admin
                    - key: component
                      operator: In
                      values:
                        - admin
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: test
          emptyDir: {}
