k8s/apps/fraternity/frat-dashboard/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  type: ClusterIP
  selector:
    component: admin
  ports:
    - name: http
      port: 3000
      targetPort: http
  sessionAffinity: None
